__SIGRTMAX is not declared in musl libc

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: core-libs
    • Environment:

      OS: Alpine Linux 3.11.6
      libc: musl (x86_64) version 1.1.24

    • b14
    • other

        Building JDK with musl libc gives the error:
        ---------------------
        src/java.base/linux/native/libnet/linux_close.c:63:25: error: '__SIGRTMAX' undeclared here (not in a function); did you mean 'SIGRTMAX'?
           63 | static int sigWakeup = (__SIGRTMAX - 2);
              | ^~~~~~~~~~
              | SIGRTMAX
        ---------------------

        This is because musl libc does not define __SIGRTMAX constant.

        Simple replacing __SIGRTMAX to SIGRTMAX does not work either because SIGRTMAX is defined as function and not as a constant:
        https://git.musl-libc.org/cgit/musl/tree/include/signal.h#n196

              Assignee:
              Alexandr Scherbatiy
              Reporter:
              Alexandr Scherbatiy
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: