8252248: __SIGRTMAX is not declared in musl libc

Reviewed-by: alanb, vtewari, stuefe